# rultor-image-hs

./: .rultor.yml  Dockerfile  README.md  REUSE.toml  settings.xml
.github/workflows/: actionlint.yml  copyrights.yml  docker-push.yml  hadolint.yml  markdown-lint.yml  reuse.yml  typos.yml  xcop.yml  yamllint.yml
LICENSES/: MIT.txt
warmup-project/: warmpup-project.cabal
warmup-project/app/: Main.hs
warmup-project/test/: Main.hs
