cabal-version:        3.0
name:                 warmup-project
version:              0.0.0.0
build-type:           Simple

executable warmup-project
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:
      base,
      async, attoparsec, aeson, amazonka-core, ansi-terminal, array,
      base64-bytestring, binary, bifunctors, blaze-builder, bytestring,
      case-insensitive, cereal, cmdargs, conduit, conduit-extra, containers,
      cabal, deepseq, directory, exceptions, filepath, ghc-prim,
      haskell-src-exts, http-client, http-conduit, http-types, HTTP,
      haskell98, hashable, hspec, HUnit, lens, lifted-base, megaparsec,
      network, network-uri, old-locale, old-time, optparse-applicative,
      parallel, parsec, pipes, pretty, pretty-show, primitive, process,
      random, regex-compat, regex-posix, resourcet, safe, scientific,
      semigroups, split, stm, syb, tagged, template-haskell, temporary,
      test-framework, test-framework-hunit, test-framework-quickcheck2,
      tasty, tasty-hunit, tasty-quickcheck, tasty-hspec, text, text-show,
      transformers, transformers-base, transformers-compat, time,
      unordered-containers, unix, vector, wai, warp, utility-ht, utf8-string,
      yaml, xml, zlib, data-default, data-default-class,
      data-default-instances-base, data-default-instances-containers,
      data-default-instances-dlist, errors, constraints, reflection, free,
      adjunctions, kan-extensions, profunctors, comonad, these, validation,
      machines, algebra, arithmoi, mtl, microlens, microlens-th, openal,
      OpenGL, GLUT, GLFW-b, SDL2, network-simple, wai-extra, wai-logger,
      warp-tls, warp-extra, servant, servant-client, servant-server,
      servant-docs, http-api-data, prettyprinter, silently, file-embed,
      binary-ieee754
  default-language:   Haskell2010

test-suite warmup-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    base,
    hspec, hspec-core, hspec-discover,
    HUnit,
    QuickCheck,
    tasty, tasty-hunit, tasty-quickcheck, tasty-hspec,
    test-framework, test-framework-hunit, test-framework-quickcheck2
  default-language: Haskell2010